updated image and dataset link

--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -83,7 +83,7 @@
             The result is moving in the right direction.
             Notice that the CS@GW text is very readable from afar and breaks down as you get closer, reminding me of the hybrid images project from earlier in this course.
             </p>
-            <p><img src="imagemosaics/slow.png" width="500" alt="cs@gw slowly improving"></p>
+            <p><img src="imagemosaics/may6.png" width="500" alt="cs@gw slowly improving"></p>
             <p>
             I also want to acknowledge that I seem to have developed some strong opinions about what constitutes a good image mosaic. Contrary to what is common, I really dislike adjusted hues of images, and I really dislike images being used more than once. These factors motivate that a strong path forward for me is building a bigger dataset.
             </p>
@@ -92,14 +92,16 @@
             Other ideas are appreciated!
             </p>
             <p>
-            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 663 in no particular order. As I've described, this dataset is a mere prototype of what it could turn into. It could be a nice project to open source for future GW CS students to build on and use in their own projects...
+            Here is <a href="https://drive.google.com/drive/folders/1eZaKD5i2Sua-KHxbiTI41rQMuab8sDoE?usp=sharing">a link to the current version of the dataset.</a> The images are named i.png where i ranges from 0 to 790 in no particular order. As I've described, this dataset is a mere prototype of what it could turn into. It could be a nice project to open source for future GW CS students to build on and use in their own projects...
             </p>
             <h6>Dataset Contributors</h6>
             Thank you very much to those who have contributed to this dataset!
             <ul>
             <li>Andy Feng
             <li>Alyssa Ilaria 
+            <li>Sam Kusner
             <li>Catherine Meadows
+            <li>Professor Tim Wood
             <li>Steven Yoon
             </ul>
         </div>
