--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -83,7 +83,7 @@
             The result is moving in the right direction.
             Notice that the CS@GW text is very readable from afar and breaks down as you get closer, reminding me of the hybrid images project from earlier in this course.
             </p>
-            <p><img src="imagemosaics/may6.png" width="500" alt="cs@gw slowly improving"></p>
+            <p><img src="imagemosaics/may6.png" width="500" alt="cs@gw may 6"></p>
             <p>
             I also want to acknowledge that I seem to have developed some strong opinions about what constitutes a good image mosaic. Contrary to what is common, I really dislike adjusted hues of images, and I really dislike images being used more than once. These factors motivate that a strong path forward for me is building a bigger dataset.
             </p>
