--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
                 which validate election results within rigorous error bounds.
                 I've enjoyed working on both the theory and implementation, contributing to our
                 <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>.
-                My first paper will appear shortly in 
-                <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
+                My first paper is listed below,
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
                 In April 2022, I presented 
                 <a href="./posters/audits_poster.pdf">a poster</a> 
-                on some of this work at the GW SEAS R+D Showcase.
+                some of this work at the GW SEAS R+D Showcase.
 
                 <ul>
                 <li>
@@ -76,6 +75,7 @@
                 I will report results here.
                 Some of our progress is reflected in <a href="https://github.com/obroadrick/imprecise">this repository</a>.
             </p>
+	<!--
             <h5>Hotel Recognition</h5>
             <p>
                 With <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a> and three peers, I am working on a search utility that uses image key points
@@ -83,6 +83,7 @@
                 existing search utility is used by the National Center for Missing and Exploited Children for sex trafficking
                 investigations.
             </p>
+	-->
             <h4><a href="teaching.html">Teaching</a></h4>
             <p>
                 I love helping folks learn.
