--- a/computational_photography/computational_photography.html
+++ b/computational_photography/computational_photography.html
@@ -29,10 +29,9 @@
         <div class="col-xs-12 col-sm-8 col-md-6">
             <h2>Computational Photography</h2>
             <p>
-            I'm taking a course on Computational Photography taught by 
-            <a href="http://www2.seas.gwu.edu/~pless/index.php">Professor Robert Pless</a> 
-            in Spring 2022.
-            I'll present some of my work from the course here.
+            In spring 2022 I took a course on Computational Photography taught by 
+            <a href="http://www2.seas.gwu.edu/~pless/index.php">Professor Robert Pless</a>.
+	    Some of the work from that course is presented here.
             </p>
             <ul>
             <li><a href="./prokudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
@@ -40,13 +39,16 @@
             <li><a href="./stitching.html">Image stitching</a>
             <li><a href="./imagemosaics.html">Image mosaics</a>
             </ul>
-
         </div>
+<div>
         <img src="prokudin-gorskii-images/00458u_aligned.jpg" width="400" alt="My aligned version">
+        </div><div>
 
         <img src="hybrid-images/tree.png" width="400" alt="tree">
+        </div><div>
 
         <img src="imagemosaics/somemore.png" width="500" alt="cs@gw some more">
+        </div>
     </div>
 </div>
 
