--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
-            <p><em>If you are a GW CS student looking for the inclusivity survey, it is now closed, and the responses were used to inform a proposal to the department which ultimately led to the formation of the <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>. Email me (obroadrick at gwu dot edu) if you have any questions or thoughts on this topic! </em>
             <p>
-                I am a senior undergraduate student studying computer science 
-                and math at 
+                I am a student studying computer science at 
                 <a href="https://www.seas.gwu.edu/">The George Washington University</a>. 
-                I'm also a proud member of
+		I recently graduated with my BS in Computer Science and Math, and now I'm at
+		GW for one more year for a MS in Computer Science.
+                I'm a proud alum of
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
             <p>
@@ -141,6 +141,8 @@
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
             |
             <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Anonymous Teaching Feedback</a>
+            |
+            <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>
             </p>
             <hr>
             <p class="small text-muted">
