--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             |
             <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Anonymous Teaching Feedback</a>
             |
-            <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>
+            <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">GW CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>
             </p>
             <hr>
             <p class="small text-muted">
