--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
-            <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
+            <p><img src="./imgs/oliver.png" width="300" class="float-md-right p-2"></p>
             <p>
                 I am a student studying computer science at 
                 <a href="https://www.seas.gwu.edu/">The George Washington University</a>. 
