--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 related results are currently being drafted. 
                 In April 2022, I presented 
                 <a href="./posters/audits_poster.pdf">a poster</a> 
-                some of this work at the GW SEAS R+D Showcase.
+                on some of this work at the GW SEAS R+D Showcase.
 
                 <ul>
                 <li>
