--- a/html/research.html
+++ b/html/research.html
@@ -44,7 +44,7 @@
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
                 In April 2022, I presented 
-                <a href="./posters/audits_poster.pdf">a poster</a> 
+                <a href="/posters/audits_poster.pdf">a poster</a> 
                 on some of this work at the GW SEAS R+D Showcase.
 
                 <ul>
