--- a/html/research.html
+++ b/html/research.html
@@ -49,6 +49,11 @@
 
                 <ul>
                 <li>
+                [<a href="/papers/providence.pdf">pdf</a>]
+                In review: Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security 2023.
+                </ul>
+ 
+                <li>
                 [<a href="/papers/simulations-of-ballot-polling-rlas.pdf">pdf</a>,
                 <a href="https://youtu.be/XyWogUQDf1c">video</a>,
                 <a href="/slides/audit_sims.pdf">slides</a>]
