--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
             <img src="../imgs/glitter.JPG" width="300"> 
             <figcaption class='small text'>A sheet of a glitter with fiducial markers in the corner for locating individual specs.</figcaption>
             </figure>
+            <ul>
+            <li>
+            [ ]
+            In preparation: Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless, "Single Image Camera Calibration From Glitter", in preparation to be submitted to CVPR 2023.
+            </ul>
 
             <h5>Scheduling</h5>
             <p>
@@ -100,7 +105,7 @@
             <ul>
             <li>
                 [ ] 
-                Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, Bhagirath Narahari, "Real-Time AI: Using AI on the Tactical Edge." In Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams. Elsevier, 2023.
+                In review: Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, Bhagirath Narahari, "Real-Time AI: Using AI on the Tactical Edge." In Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams. Elsevier, 2023.
             </ul>
             </p>
             </div><!--end research section-->
