--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <ul>
                 <li>
-                [<a href="/papers/providence.pdf">pdf</a>]
+                [<a href="https://arxiv.org/abs/2210.08717">pdf</a>]
                 In review: Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security 2023.
  
                 <li>
