--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/oliver.png" width="300" class="float-md-right p-2"></p>
             <p>
-                I am a student studying computer science at 
-                <a href="https://www.seas.gwu.edu/">The George Washington University</a>. 
-		I graduated in 2022 with my BS in Computer Science and Math, and now I'm at
-		GW for one more year for an MS in Computer Science.
+                I study computer science at 
+                <a href="https://www.seas.gwu.edu/">The George Washington University</a>.
+                I completed a BS in '22 and expect to complete an MS in '23.
+                I am applying for PhD programs in computer science for Fall 2023.
                 
-                I'm also a proud alum of
-                <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
             <p>
             Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a> and <a href="https://github.com/obroadrick">my GitHub</a>. Here is information about my <a href="html/teaching.html">teaching and tutoring</a>.
@@ -99,18 +97,18 @@
 
             <h5>Scheduling</h5>
             <p>
-                I designed and analyzed scheduling algorithms using the imprecise computation model for a project on real-time AI at the edge. Here is the <a href="https://github.com/obroadrick/imprecise">software</a>.
+                I designed and analyzed scheduling algorithms using the imprecise computation model for a project on real-time AI at the edge. Here is the <a href="https://github.com/obroadrick/imprecise">software</a>. 
 
             <ul>
             <li>
-                [ ] 
-                In review: Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, Bhagirath Narahari, "Real-Time AI: Using AI on the Tactical Edge." In Putting AI in the Critical Loop: Assured Trust and Autonomy in Human-Machine Teams. Elsevier, 2023.
+            [ ] 
+            In review: submitted to Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
             </ul>
             </p>
             </div><!--end research section-->
 
             <div><!--assorted links section-->
-            <h4>Assorted links</h4>
+            <h4>Other</h4>
             <ul>
             <li>
             <a href="html/snake.html">Play Snake</a>
@@ -118,6 +116,9 @@
             <li>
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
             -->
+
+            <li>
+            I'm a proud alum of <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>
             <li>
             <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Give me anonymous teaching/tutoring feedback</a>
             <li>
