--- a/html/teaching.html
+++ b/html/teaching.html
@@ -29,39 +29,24 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <h4>Teaching</h4>
             <p>
-            <em>If you are a student of mine (either in a class for which I am an instructional assistant or in tutoring), please use <a href="https://forms.gle/EATCsDffzH54ToZh7">this form</a> to give me anonymous feedback on my teaching. Please, don't hold back; this feedback will be used to make me a better teacher for you and many who come after you.</em>
+            <em>If you are student of mine (either as TA at GW or as a tutor), please use <a href="https://forms.gle/EATCsDffzH54ToZh7">this form</a> to give me anonymous feedback on my teaching. Please, don't hold back; this feedback will be used to make me a better teacher for you and many who come after you.</em>
             </p>
+            <h5>Tutoring</h5>
             <p>
-                I love helping folks learn.
                 I have been tutoring math, physics, and computer science since I was in high school.
                 Since then I have tutored for:
                 <ul>
                 <li>
-                <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department,</a>
+                <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a> (GW student-athletes)
                 <li>
-                <a href="https://www.tungstenprep.com/">Tungsten Prep (DC area high school students)</a>
+                <a href="https://www.tungstenprep.com/">Tungsten Prep</a> (DC area high school students)
                 <li>
-                <a href="https://nrotc.gwu.edu/">GW Naval ROTC (a few dozen calculus and physics students</a>
+                <a href="https://nrotc.gwu.edu/">GW Naval ROTC</a> (a few dozen calculus and physics students)
                 </ul>
                 <p>
-                If you're here for my tutoring, please fill out
-                <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
-                </p>
-                <p>
-                I have worked as an instructional assistant for the past several semesters, including leading my own lab sections in Fall '21 and Spring '22:
-                <ul>
-                <li>
-                <a href="https://gw-cs3313.github.io/">Foundations of Computing, Spring 2022</a>
-                <li>
-                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/">Discrete Structures II, Fall 2021</a>
-                <li>
-                <a href="https://gw-cs3313-2021.github.io/">Foundations of Computing, Spring 2021</a>
-                <li>
-                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II, Fall 2020</a>
-                <li>
-                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I, Spring 2020</a>
-                </ul>
-            </p>
+
+            <h5>TA-ing</h5>
+                I have worked as an instructional assistant at GW since 2020, including leading my own discussion sections since Fall 2021. I have been a TA for GW's courses on Discrete Mathematics and Foundations of Computing.
         </div>
     </div>
 </div>
