--- a/index.html
+++ b/index.html
@@ -112,18 +112,11 @@ presentation at 2022 AAAI Spring symposium.
             <h4>Other</h4>
             <ul>
             <li>
-            <a href="html/snake.html">Play Snake</a>
-            <!--
-            <li>
-            <a href="computational_photography/computational_photography.html">Computational Photography</a>
-            -->
-
+            Play <a href="html/snake.html">Snake</a>
             <li>
             I'm a proud alum of <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>
             <li>
-            <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Give me anonymous teaching/tutoring feedback</a>
-            <li>
-            <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">GW CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>
+            Give me <a href="https://forms.gle/MQp1poZjbd5sR2kv5">anonymous teaching/tutoring feedback</a>
             </ul>
             <hr>
             <p class="small text-muted">
