--- a/html/teaching.html
+++ b/html/teaching.html
@@ -41,7 +41,7 @@
                 <li>
                 <a href="https://www.tungstenprep.com/">Tungsten Prep</a> (DC area high school students)
                 <li>
-                <a href="https://nrotc.gwu.edu/">GW Naval ROTC</a> (a few dozen calculus and physics students)
+                <a href="https://nrotc.gwu.edu/">US Navy ROTC, Capital Battalion</a> (a few dozen calculus and physics students)
                 </ul>
                 <p>
 
