--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
             <ul>
             <li>
-            [ ] 
-            Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "RealTime AI: Using AI on the Tactical Edge," In review, submitted to Elsevier book chapter in "Assured
+            [preprint available 7 Jan 2022] 
+            Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "RealTime AI: Using AI on the Tactical Edge," Elsevier book chapter in "Assured
 Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on
 presentation at 2022 AAAI Spring symposium.
             </ul>
