--- a/index.html
+++ b/index.html
@@ -28,26 +28,21 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/oliver.png" width="300" class="float-md-right p-2"></p>
             <p>
-                I study computer science at 
-                <a href="https://www.seas.gwu.edu/">The George Washington University</a>.
-                I completed a BS in '22 and expect to complete an MS in '23.
-                I am applying for PhD programs in computer science for Fall 2023.
-                
+                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm applying for PhDs in Computer Science beginning in Fall 2023.
             </p>
             <p>
-            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a> and <a href="https://github.com/obroadrick">my GitHub</a>. Here is information about my <a href="html/teaching.html">teaching and tutoring</a>.
+            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>, <a href="https://github.com/obroadrick">my GitHub</a>, and some information about my <a href="html/teaching.html">teaching and tutoring</a>.
             </p>
             <p>
             </p>
             <p>
-
             Contact me by email: odbroadrick (at) gmail (dot) com 
             </p>
             <div><!--begin research section-->
             <h4>Research</h4>
             <p>
                 My research interests are still forming, but I like thinking mathematically, 
-                and I've particularly enjoyed working on projects that have social impact.
+                and I've particularly enjoyed working on projects with social impact.
             <h5>Statistical Election Audits</h5>
             <p>
                 Since 2020 I've been a member of 
