--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/oliver.png" width="300" class="float-md-right p-2"></p>
             <p>
-                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm applying for PhDs in Computer Science beginning in Fall 2023.
+                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm very excited to be applying for PhDs in Computer Science for Fall 2023.
             </p>
             <p>
             Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>, <a href="https://github.com/obroadrick">my GitHub</a>, and some information about my <a href="html/teaching.html">teaching and tutoring</a>.
