--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <ul>
             <li>
-            [preprint available 17 Jan 2022] 
+            [I'll add a preprint here 23 Jan 2023] 
             Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "RealTime AI: Using AI on the Tactical Edge," Elsevier book chapter in "Assured
 Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on
 presentation at 2022 AAAI Spring symposium.
