--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 Preprints and publications are given below, and an additional manuscript is in preparation.
                 <ul>
                 <li>
-                [<a href="https://arxiv.org/abs/2210.08717">pdf</a>]
-                In review: Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". USENIX Security 2023.
+                [preprint forthcoming, <a href="https://arxiv.org/abs/2210.08717">arxiv (similar) version</a>]
+                Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". To appear, USENIX Security 2023.
  
                 <li>
                 [<a href="/papers/simulations-of-ballot-polling-rlas.pdf">pdf</a>,
