--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <ul>
             <li>
-            [I'll add a preprint here shortly] 
+            [preprint forthcoming] 
             Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "RealTime AI: Using AI on the Tactical Edge," Elsevier book chapter in "Assured
 Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on
 presentation at 2022 AAAI Spring symposium.
