--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
-            <p><img src="./imgs/oliver.png" width="300" class="float-md-right p-2"></p>
+            <p><img src="./imgs/headshot.jpg" width="300" class="float-md-right p-2"></p>
             <p>
                 I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm very excited to be applying for PhDs in Computer Science for Fall 2023.
             </p>
