--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Preprints and publications are given below, and an additional manuscript is in preparation.
                 <ul>
                 <li>
-                [preprint forthcoming, <a href="https://arxiv.org/abs/2210.08717">arxiv (similar) version</a>]
+                [<a href="/papers/providence.pdf">preprint</a>, <a href="https://arxiv.org/abs/2210.08717">arxiv (similar) version</a>]
                 Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". To appear, USENIX Security 2023.
  
                 <li>
