--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
             <p>
             <em>Glitter.</em>
             The appearance of a sheet of glitter illuminated by a point light source is 
-            highly sensitive to viewing position. This makes gives glitter sheets 
-            strong potential as an inexpensive planar target for single image camera 
-            calibration. Since Summer 2022, I've been working with 
+            highly sensitive to viewing position. This property allows single-image camera calibration with an inexpensive, planar glitter sheet target.
+            Since Summer 2022, I've been working with 
             <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a> 
             and peer <a href="https://github.com/adellari">Addy Irankunda</a> 
             to develop such a camera calibration tool resulting in a manuscript
