--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I quite like teaching. I do so as the unit tutor for the
+            I quite like teaching. I am the unit tutor for the
             <a href="https://nrotc.gwu.edu/">US Navy ROTC, Capital Battalion</a>,
             a private tutor at 
             <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, 
-            and as a teaching assistant in George Washington University's courses 
+            and a teaching assistant in George Washington University's courses 
             on Discrete Mathematics and Foundations of Computing.
             </p>
             <p>
