--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             </p>
 
             <ol>
-            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="/papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (Presentation <a href="https://youtu.be/XyWogUQDf1c">video</a> and <a href="/slides/audit_sims.pdf">slides</a>.)
+            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="/papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (Presentation <a href="https://youtu.be/XyWogUQDf1c">video</a> and <a href="/slides/audit_sims.pdf">slides</a>.)
 
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, <a href="/papers/providence.pdf">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. To appear, USENIX Security 2023. Similar version on <a href="https://arxiv.org/abs/2210.08717">arXiv</a>.
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". To appear, USENIX Security 2023. Similar version on <a href="https://arxiv.org/abs/2210.08717">arXiv</a>.
 
             <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless, "Single Image Camera Calibration From Glitter", in preparation to be submitted to ICCP 2023.
 
