--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <h6>Publications</h6>
             <ol reversed>
-            <!-- <li> Oliver Broadrick, "Ballot polling risk-limiting audits: a new statistical test and workload analysis", MS Thesis, The George Washington University, 2023.-->
+            <!-- <li> Oliver Broadrick, "Ballot polling risk-limiting audits: a new statistical test and workload analysis", MS Thesis, The George Washington University, 2023. (<a href="/papers/Broadrick_MS_thesis.pdf">pdf</a>, <a href="/slides/Broadrick_MS_thesis_slides.pdf">slides</a>)-->
 
             <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless, "Single Image Camera Calibration From Glitter", in preparation, 2023.
 
