--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="300" class="float-md-right p-2"></p>
             <p>
-                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm very excited to be applying for PhDs in Computer Science for Fall 2023.
+                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA for my PhD in Fall 2023.
             </p>
             <p>
             Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>
@@ -64,8 +64,7 @@
                 <a href="https://www.ri.gov/press/view/43054">their press release</a>.
                 PROVIDENCE is implemented in open source software package Arlo, the most
                 popular election audit software in the US.
-                I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS 
-                R+D Showcase.
+                I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.
             </p>
             <p>
             <!--
