--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless, "Single Image Camera Calibration From Glitter", in preparation, 2023.
 
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, "PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit". To appear, USENIX Security 2023. Similar version on <a href="https://arxiv.org/abs/2210.08717">arXiv</a>.
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">"PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit"</a>. To appear, USENIX Security 2023. Similar version on <a href="https://arxiv.org/abs/2210.08717">arXiv</a>.
 
             <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "Real-Time AI: Using AI on the Tactical Edge," Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
 
