--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 implementation,
                 and participated in its pilot use by the US State of Rhode Island, described in 
                 <a href="https://www.ri.gov/press/view/43054">their press release</a>.
-                PROVIDENCE is implemented in open source software package Arlo, the most
+                PROVIDENCE is implemented in open source software package <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>, the most
                 popular election audit software in the US.
                 I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.
             </p>
@@ -93,13 +93,13 @@
             <ol reversed>
             <!-- <li> Oliver Broadrick, "Ballot polling risk-limiting audits: a new statistical test and workload analysis", MS Thesis, The George Washington University, 2023. (<a href="/papers/Broadrick_MS_thesis.pdf">pdf</a>, <a href="/slides/Broadrick_MS_thesis_slides.pdf">slides</a>)-->
 
-            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless, "Single Image Camera Calibration From Glitter", in preparation, 2023.
+            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.
+            <li> Oliver Broadrick. Risk-Limiting Audit PROVIDENCE and Round Size Considerations. MS Thesis, The George Washington University, 2023.
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. To appear, USENIX Security 2023. (<a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
 
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski, <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">"PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit"</a>. To appear, USENIX Security 2023. Similar version on <a href="https://arxiv.org/abs/2210.08717">arXiv</a>.
+            <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
 
-            <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari, "Real-Time AI: Using AI on the Tactical Edge," Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2022)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
-
-            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="/papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (Presentation <a href="https://youtu.be/XyWogUQDf1c">video</a> and <a href="/slides/audit_sims.pdf">slides</a>.)
+            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. <a href="/papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="https://youtu.be/XyWogUQDf1c">video</a>, <a href="/slides/audit_sims.pdf">slides</a>)
 
             </ol>
 
