--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h4>Other</h4>
             <ul>
             <li>
-            Play <a href="html/snake.html">Snake</a>
+            Play <a href="html/snake.html">Snake</a> (requires keyboard)
             <li>
             I'm a proud alum of <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>
             </ul>
