--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="300" class="float-md-right p-2"></p>
             <p>
-                I study computer science at <a href="https://www.seas.gwu.edu/">GWU</a>. I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA for my PhD in Fall 2023.
+                For my PhD in Computer Science, I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA in Fall 2023. For the past five years, I've been studying at GW, advised by the terrific <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>
