--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="300" class="float-md-right p-2"></p>
             <p>
-                For my PhD in Computer Science, I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA in Fall 2023. For the past five years, I've been studying at GW, advised by the terrific <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                For my PhD in Computer Science, I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA in Fall 2023. For the past five years, I've been studying math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>
@@ -47,7 +47,7 @@
             </p>
             <p>
             <em>Statistical Election Audits.</em>
-                Among other things, I've worked in 
+                I've worked in 
                 <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>'s
                 research group on risk-limiting audits (RLAs), 
                 rigorous statistical procedures
@@ -105,12 +105,12 @@
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I quite like teaching. I am the unit tutor for the
-            <a href="https://nrotc.gwu.edu/">US Navy ROTC, Capital Battalion</a>,
-            a private tutor at 
-            <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, 
-            and a teaching assistant in George Washington University's courses 
-            on Discrete Mathematics and Foundations of Computing.
+            I quite like teaching. I have tutored high school and college students for the
+            <a href="https://nrotc.gwu.edu/">US Navy ROTC Capital Battalion</a>,
+             
+            <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department. I've been a 
+            teaching assistant in George Washington University's courses 
+            on Discrete Mathematics and Theory of Computing for several semesters.
             </p>
             <p>
             <em>Please give me <a href="https://forms.gle/EATCsDffzH54ToZh7">anonymous feedback</a> on my teaching.</em>
