--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ol reversed>
             <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.
             <li> Oliver Broadrick. <a href="/papers/broadrick_ms_thesis.pdf">Risk-Limiting Audit PROVIDENCE and Round Size Considerations</a>. MS Thesis, The George Washington University, 2023.
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. To appear, USENIX Security 2023. (<a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
 
             <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2023)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
 
