--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 For my PhD in Computer Science, I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA in Fall 2023. For the past five years, I've been studying math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
-            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>
-            and <a href="https://github.com/obroadrick">my GitHub</a>.
+            <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
+            [ <a href="https://github.com/obroadrick">GitHub</a> ]
             </p>
             <p>
             </p>
