--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             <ol reversed>
 <!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
             <li> Oliver Broadrick. <a href="/papers/broadrick_ms_thesis.pdf">Risk-Limiting Audit PROVIDENCE and Round Size Considerations</a>. MS Thesis, The George Washington University, 2023.
-            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
+            <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
 
             <li> Hesham Fouad, Oliver Broadrick, Benjamin Harvey, Charles Peeke, and Bhagirath Narahari. Real-Time AI: Using AI on the Tactical Edge. Elsevier book chapter in "Assured Trust and Autonomy in Human-Machine teams (AAAI SSS 2023)", selected invited papers based on presentation at 2022 AAAI Spring symposium.
 
-            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. <a href="/papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="https://youtu.be/XyWogUQDf1c">video</a>, <a href="/slides/audit_sims.pdf">slides</a>)
+            <li> Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski. <a href="/papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022. (<a href="https://youtu.be/XyWogUQDf1c">talk</a>, <a href="/slides/audit_sims.pdf">slides</a>)
 
             </ol>
 
