--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
-            <p><img src="./imgs/headshot.jpg" width="300" class="float-md-right p-2"></p>
+            <p><img src="./imgs/2023.jpg" width="300" class="float-md-right p-2"></p>
             <p>
                 For my PhD in Computer Science, I'm very excited to be joining the lab of <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a> at UCLA in Fall 2023. For the past five years, I've been studying math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
