--- a/index.html
+++ b/index.html
@@ -41,28 +41,24 @@
             </p>
             <div><!--begin research section-->
             <h4>Research</h4>
+            <!--
             <p>
                 My research interests are still forming. I love thinking mathematically,
                 and I particularly enjoy projects with social impact.
             </p>
+            -->
             <p>
             <em>Statistical Election Audits.</em>
-                I've worked in 
-                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>'s
-                research group on risk-limiting audits (RLAs), 
+                Risk-limiting audits (RLAs) are
                 rigorous statistical procedures
                 used to detect errors in election results.
-                This has included experimentation [1] 
+                In <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>'s group, I have done work
+                including experiments [1] 
                 and the development of a new statistical test, PROVIDENCE,
                 the most efficient and secure ballot polling RLA known [3].
-                I wrote a proof that PROVIDENCE is risk-limiting, 
-                conducted experiments to develop understanding of the test,
-                wrote an 
-                <a href="https://github.com/gwexploratoryaudits/r2b2">open source</a> 
-                implementation,
-                and participated in its pilot use by the US State of Rhode Island, described in 
+                PROVIDENCE's pilot use in the US State of Rhode Island is described in 
                 <a href="https://www.ri.gov/press/view/43054">their press release</a>.
-                PROVIDENCE is implemented in open source software package <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>, the most
+                PROVIDENCE is implemented in open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>, the most
                 popular election audit software in the US.
                 I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.
             </p>
