--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/2023.jpg" width="300" class="float-md-right p-2"></p>
             <p>
-                I am Computer Science PhD student at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s lab. Before UCLA, I studyied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I am Computer Science PhD student at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s lab. Before UCLA, I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
