--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
-            [ <a href="https://github.com/obroadrick">GitHub</a> ]
+            [ <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> ] [ <a href="https://github.com/obroadrick">GitHub</a> ] 
             </p>
             <p>
             </p>
