--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/2023.jpg" width="300" class="float-md-right p-2"></p>
             <p>
-                I am a Computer Science PhD student at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s group. Before UCLA, I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in Computer Science at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s group. Before UCLA, I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
@@ -60,7 +60,7 @@
                 <a href="https://www.ri.gov/press/view/43054">their press release</a>.
                 PROVIDENCE is implemented in open source <a href="https://www.voting.works/risk-limiting-audits">Arlo</a>, the most
                 popular election audit software in the US.
-                I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.
+                <!--I presented <a href="/posters/audits_poster.pdf">a poster</a> on some of this work at the 2022 GW SEAS R+D Showcase, and <a href="/posters/providence_poster.pdf">another poster</a> at the 2023 GW Business and Policy Forum on Cybersecurity.-->
             </p>
             <p>
             <!--
