--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/2023.jpg" width="300" class="float-md-right p-2"></p>
+<!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
+
             <p>
                 I'm a PhD student in Computer Science at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s group. Before UCLA, I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
@@ -101,12 +103,12 @@
             <div><!--begin teaching section-->
             <h4>Teaching</h4>
             <p>
-            I quite like teaching. I have tutored high school and college students for the
+            I love teaching. Since high school I have tutored for hundreds of hours at the high school and college level in mathematics, computer science, and physics.
+            <!--I have tutored high school and college students for the
             <a href="https://nrotc.gwu.edu/">US Navy ROTC Capital Battalion</a>,
-             
-            <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department. I've been a 
-            teaching assistant in George Washington University's courses 
-            on Discrete Mathematics and Theory of Computing for several semesters.
+            <a href="https://www.tungstenprep.com/">Tungsten Prep</a>, and the George Washington University Athletics Department.--> 
+            At GWU, I was a teaching assistant in Discrete Mathematics and Theory of Computation courses for several semesters.
+            <!--I've been a teaching assistant in George Washington University's courses on Discrete Mathematics and Theory of Computing for several semesters.-->
             </p>
             <p>
             <em>Please give me <a href="https://forms.gle/EATCsDffzH54ToZh7">anonymous feedback</a> on my teaching.</em>
