--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             </p>
             <div><!--begin research section-->
             <h4>Research</h4>
+            <p>
+            <em>Foundations of Probabilistic Machine Learning.</em>
+            What are the conditions that make probabilistic inference tractable?
+            Towards this question, I'm studying circuit models which serve as a 
+            unifying framework for myriad known tractable probabilistic models (e.g.
+            Probabilistic Graphical Models).
+            In my first paper on this topic [5], we consider a number of previously
+            studied polynomial semantics for such circuit models and show that they
+            are all tractable and equally <em>expressive-efficient</em>, i.e. 
+            they can be reduced to each other.
+            </p>
             <!--
             <p>
                 My research interests are still forming. I love thinking mathematically,
@@ -89,6 +100,7 @@
 
             <h6>Publications</h6>
             <ol reversed>
+            <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. In submission, UAI 2024. (<a href="https://arxiv.org/abs/2402.09085">arxiv</a>)
 <!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
             <li> Oliver Broadrick. <a href="/papers/broadrick_ms_thesis.pdf">Risk-Limiting Audit PROVIDENCE and Round Size Considerations</a>. MS Thesis, The George Washington University, 2023.
             <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
