--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
 <!--<tr><td><image border=1 bordercolor=black src="pv.jpg"> <P align="right"></P></td></tr>-->
 
             <p>
-                I'm a PhD student in Computer Science at UCLA in <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>'s group. Before UCLA, I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
+                I'm a PhD student in Computer Science at UCLA advised by <a href="https://web.cs.ucla.edu/~guyvdb/">Guy Van den Broeck</a>. Previously I studied math and computer science at GW, advised by the stupendous <a href="https://www2.seas.gwu.edu/~poorvi/">Poorvi Vora</a>.
             </p>
             <p>
             <!--Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>-->
-            [ <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> ] [ <a href="https://github.com/obroadrick">GitHub</a> ] 
+            <!--[ <a href="https://github.com/obroadrick">GitHub</a> ] -->
             </p>
             <p>
             </p>
             <p>
-            Contact me by email: odbroadrick (at) gmail (dot) com 
+            Contact me by email: obroadrick (at) ucla (dot) edu
             </p>
             <div><!--begin research section-->
             <h4>Research</h4>
             <p>
             <em>Foundations of Probabilistic Machine Learning.</em>
-            What are the conditions that make probabilistic inference tractable?
+            In what conditions is probabilistic inference tractable?
             Towards this question, I'm studying circuit models which serve as a 
-            unifying framework for myriad known tractable probabilistic models (e.g.
-            Probabilistic Graphical Models).
+            unifying framework for myriad known tractable probabilistic models 
+            (e.g. Probabilistic Graphical Models).
             In my first paper on this topic [5], we consider a number of previously
             studied polynomial semantics for such circuit models and show that they
             are all tractable and equally <em>expressive-efficient</em>, i.e. 
-            they can be reduced to each other.
+            that they can be reduced to each other.
             </p>
             <!--
             <p>
@@ -99,8 +99,9 @@
             -->
 
             <h6>Publications</h6>
+            Also see my <a href="https://scholar.google.com/citations?user=wn58ujYAAAAJ&hl=en">Google Scholar</a> page.
             <ol reversed>
-            <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. In submission, UAI 2024. (<a href="https://arxiv.org/abs/2402.09085">arxiv</a>)
+            <li> Oliver Broadrick, Honghua Zhang, Guy Van den Broeck. Polynomial Semantics of Tractable Probabilistic Circuits. Under review. (<a href="https://arxiv.org/abs/2402.09085">arxiv</a>)
 <!--            <li> Oliver Broadrick, Adellar Irankunda, Maya Shende, Abby Stylianou, and Robert Pless. Single Image Camera Calibration From Glitter. In preparation, 2023.-->
             <li> Oliver Broadrick. <a href="/papers/broadrick_ms_thesis.pdf">Risk-Limiting Audit PROVIDENCE and Round Size Considerations</a>. MS Thesis, The George Washington University, 2023.
             <li> Oliver Broadrick, Poorvi Vora, and Filip Zag&oacute;rski. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/broadrick">PROVIDENCE: a Flexible Round-by-Round Risk-Limiting Audit</a>. USENIX Security 2023. (<a href="https://www.youtube.com/watch?v=LYYwO0-WwNY">talk</a>, <a href="/papers/providence_slides.pdf">slides</a>, <a href="https://arxiv.org/abs/2210.08717">earlier arXiv version</a>)
